5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1585_2895.log
== TEST (2019-03-21 11:32:58) 
-- CODE:
jogos: float(input('Quantidade de jogos':))
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
File "XXXX", line 1
    jogos: float(input('Quantidade de jogos':))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:20) 
-- CODE:
jogos: float(input('Quantidade de jogos:'))
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total: jogos+preco+frete
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:06) 
-- CODE:
jogos: float(input('Quantidade:'))
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total: jogos+preco+frete
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:15) 
-- CODE:
jogos:float(input('Quantidade:'))
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total: jogos+preco+frete
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:49) 
-- CODE:
jogos: float(input('quantidade:'))
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total: jogos+preco+frete
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:30) 
-- CODE:
jogos: float(input('Quantidade:')
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
File "XXXX", line 2
    preco: float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:41) 
-- CODE:
jogos:float(input('Quantidade:')
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
File "XXXX", line 2
    preco: float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:52) 
-- CODE:
jogo:float(input('Quantidade:')
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
File "XXXX", line 2
    preco: float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:22) 
-- CODE:
quantidade :float(input('Quantidade:')
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
File "XXXX", line 2
    preco: float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:51) 
-- CODE:
jogos= float(input('Quantidade:')_
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
File "XXXX", line 1
    jogos= float(input()_
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:59) 
-- CODE:
jogos= float(input('Quantidade:'))
preco: float(input('Preço do jogo:'))
frete: float(input('Valor do frete:'))
total: jogos+preco+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total: jogos+preco+frete
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:10) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preço do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos+preco+frete
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:40) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preco do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos+preco+frete
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:38:55) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preco do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos+preco+frete
print(total)
-- EXECUTION TIME:
0.145821
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:07) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preco do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos+preco+frete
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:40:25) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preco do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos+preco+frete
print(total)
-- EXECUTION TIME:
0.142127
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:47) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preco do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos*preco+frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:40:50) 
-- CODE:
jogos= float(input('Quantidade:'))
preco= float(input('Preco do jogo:'))
frete= float(input('Valor do frete:'))
total= jogos*preco+frete
print(total)
-- EXECUTION TIME:
0.197042
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
